--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://joonas98.github.io/React",
+  "homepage": "htttp://Joonas98.github.io/React",
   "name": "react",
   "private": true,
   "version": "0.0.0",
