--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "react",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
+  "homepage": "https://joonas98.github.io/React/",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
